tests/machine/x/ocaml/string_compare.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_compare.ml", line 3, characters 2-15:
3 |   print_endline ("a" < "b")
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 3):
   1 | 
   2 | let () =
   3 |   print_endline ("a" < "b")
   4 |   print_endline ("a" <= "a")
   5 |   print_endline ("b" > "a")
