tests/machine/x/ocaml/string_compare.ml

let () =
  print_endline ("a" < "b")
  print_endline ("a" <= "a")
  print_endline ("b" > "a")
  print_endline ("b" >= "b")
